[gd_scene load_steps=3 format=2]

[ext_resource path="res://SomeToolTestings/Mixing desk/ManagerTest2.gd" type="Script" id=1]
[ext_resource path="res://SomeToolTestings/Mixing desk/Decorator/MDMManager.tscn" type="PackedScene" id=2]

[node name="ManagerTest2" type="Node2D"]
script = ExtResource( 1 )

[node name="MDMManager" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true

[node name="UI" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 348.0
margin_top = 273.0
margin_right = 675.0
margin_bottom = 327.0
custom_constants/separation = 10

[node name="Song1" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_right = 263.0
margin_bottom = 54.0
custom_constants/separation = 10

[node name="Song1Button" type="Button" parent="UI/HBoxContainer/Song1"]
margin_right = 263.0
margin_bottom = 20.0
text = "Song 1"

[node name="Tracks" type="HBoxContainer" parent="UI/HBoxContainer/Song1"]
margin_top = 30.0
margin_right = 263.0
margin_bottom = 54.0
custom_constants/separation = 10

[node name="Piano" type="CheckBox" parent="UI/HBoxContainer/Song1/Tracks"]
margin_right = 63.0
margin_bottom = 24.0
text = "Piano"

[node name="UltraSoft" type="CheckBox" parent="UI/HBoxContainer/Song1/Tracks"]
margin_left = 73.0
margin_right = 156.0
margin_bottom = 24.0
text = "UltraSoft"

[node name="OtherParts" type="CheckBox" parent="UI/HBoxContainer/Song1/Tracks"]
margin_left = 166.0
margin_right = 263.0
margin_bottom = 24.0
text = "OtherParts"

[node name="Song2" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_left = 273.0
margin_right = 327.0
margin_bottom = 54.0

[node name="Song2Button" type="Button" parent="UI/HBoxContainer/Song2"]
margin_right = 54.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Song 2"

[connection signal="pressed" from="UI/HBoxContainer/Song1/Song1Button" to="." method="_on_Song1Button_pressed"]
[connection signal="toggled" from="UI/HBoxContainer/Song1/Tracks/Piano" to="." method="_on_Piano_toggled"]
[connection signal="toggled" from="UI/HBoxContainer/Song1/Tracks/UltraSoft" to="." method="_on_UltraSoft_toggled"]
[connection signal="toggled" from="UI/HBoxContainer/Song1/Tracks/OtherParts" to="." method="_on_OtherParts_toggled"]
[connection signal="pressed" from="UI/HBoxContainer/Song2/Song2Button" to="." method="_on_Song2Button_pressed"]
